# bball_scraper

./: .gitignore  README.md  Untitled.ipynb  data.py  main.py  pyproject.toml  read_html.py  request.py  setup_db.py  webscraping.ipynb
bball_scraper/: Untitled.ipynb  checks.py  logging.py  main.py  query.py  read_tables.py  var.py
data/: active_players.csv  injuries.csv  league_schedule.csv  schedule_2024.csv  team_rosters.csv  team_rosters_2024.csv  team_rosters_now.csv  updated_injuries.csv
notebooks/: test.py.ipynb  webscraping.ipynb
setup/: setup.sh
